Visual align fix for answers

--- a/projectnano/src/Components/Answer.css
+++ b/projectnano/src/Components/Answer.css
@@ -1,7 +1,8 @@
 .answer {
     border-radius: 10px;
     padding: 5px;
-    margin: 20px 5px 5px 25%;
+    margin-top: 20px;
+    margin-left: 24%;
     width: 50%;
 }
 
